--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@ transition: all 0s ease 0s; vertical-align: baseline;' target=''> Scroll Down &a
 onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="button" value="Refresh Live Links"/>
 </center>
 
+<!-- ShareThis BEGIN --><div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->
+
     
 <div class="container mt-4" style="background-color: transparent; color: inherit;">
 <div id="live-container"></div>
