--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     input.MyButton { width: 200px; padding: 7px; cursor: pointer; font-weight: bold; font-size: 100%; background: #0a0647; color: #fff; border: 1px solid #0a0647; border-radius: 10px; } input.MyButton:hover { color: #ff0000; background: #000; border: 1px solid #fff; }
 </style>
 
+<script async='async' src='https://platform-api.sharethis.com/js/sharethis.js#property=674c99314d98db0019732be3&product=sop' type='text/javascript'></script>
 
     <!-- Bootstrap CSS -->
     <link rel="shortcut icon" href="/favicon.png" type="image/webp">
