--- a/edit.html
+++ b/edit.html
@@ -50,14 +50,14 @@
 
     <div class="links">
     <p>  Cricket </p>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> India </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> Australia </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> England </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> Sri Lanka </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> New Zealand </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/india.json"> India </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/australia.json"> Australia </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/england.json"> England </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/southafrica.json"> Sri Lanka </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/srilanka.json"> New Zealand </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/windies.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/bangladesh.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/afghanistan.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
@@ -72,12 +72,17 @@
     <a href="https://github.com/yosintv2/livee/edit/main/manunited.json"> Man United </a>
     <a href="https://github.com/yosintv2/livee/edit/main/tottenham.json"> Tottenham </a>
     <a href="https://github.com/yosintv2/livee/edit/main/liverpool.json"> Liverpool </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/newcastle.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/chelsea.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/brighton.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/aston.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/arsenal.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/brentford.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/newcastle.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/nottingham.json"> _____ </a>   
+    <a href="https://github.com/yosintv2/livee/edit/main/wolves.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>   
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
   </div>
   
@@ -89,8 +94,8 @@
     <a href="https://github.com/yosintv2/livee/edit/main/realmadrid.json"> Real Madrid </a>
     <a href="https://github.com/yosintv2/livee/edit/main/athletic.json"> Athletic </a>
     <a href="https://github.com/yosintv2/livee/edit/main/realbetis.json"> Real Betis </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/deportivo.json">  </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/espanyol.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
@@ -101,9 +106,9 @@
   
    <div class="links">
     <p>  Bundesliga </p>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/bayern.json"> Bayern Munchen </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/dortmund.json"> Dortmund </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> Leverkusen </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
@@ -120,8 +125,8 @@
     <a href="https://github.com/yosintv2/livee/edit/main/napoli.json"> Napoli </a>
     <a href="https://github.com/yosintv2/livee/edit/main/intermilan.json"> Inter Milan </a>
     <a href="https://github.com/yosintv2/livee/edit/main/juventus.json"> Juventus </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/roma.json"> Roma </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/acmilan.json"> AC Milan </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
@@ -133,9 +138,9 @@
 
     <div class="links">
     <p>  Ligue 1 </p>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/psg.json"> PSG </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/monza.json"> Monza </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/lille.json"> Lille </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
@@ -150,18 +155,11 @@
 
     <div class="links">
     <p>  Saudi Pro League </p>
-    <a href="https://github.com/yosintv2/livee/edit/main/hoffenheim.json"> Hoffenheim </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
-  </div>
+    <a href="https://github.com/yosintv2/livee/edit/main/alnassr.json"> Al Nassr </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/alittihad.json"> Al Ittihad </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/alhilal.json"> Al Hilal </a>
+   <a href="https://github.com/yosintv2/livee/edit/main/porto.json"> Porto </a>
+    </div>
 
 
   
