--- a/edit.html
+++ b/edit.html
@@ -94,7 +94,7 @@
     <a href="https://github.com/yosintv2/livee/edit/main/realmadrid.json"> Real Madrid </a>
     <a href="https://github.com/yosintv2/livee/edit/main/athletic.json"> Athletic </a>
     <a href="https://github.com/yosintv2/livee/edit/main/realbetis.json"> Real Betis </a>
-    <a href="https://github.com/yosintv2/livee/edit/main/deportivo.json">  </a>
+    <a href="https://github.com/yosintv2/livee/edit/main/deportivo.json"> _____  </a>
     <a href="https://github.com/yosintv2/livee/edit/main/espanyol.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
     <a href="https://github.com/yosintv2/livee/edit/main/_____.json"> _____ </a>
