--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <!-- Header Section -->
 <header class="header">
 <h1><b>YoSinTV Live Stream</b></h1>
-<p><b>Note:</b> Brave Broswer & Ad Blocker hides Match Live Link !! </p>
+<p><b>Note:</b> Ad Blocker hides Match Live Link !! </p>
 
 <p bis_skin_checked='1' class='notice' id='notice' style='background: rgb(244 17 17); border-radius: 0px; border: 0.01pc solid rgb(0, 52, 70); 
 box-sizing: border-box; color: #003446; font-family: Raleway, Arial, sans-serif; font-size: 1pc; list-style: none; margin: 0.275pc; outline: none; 
