--- a/index.html
+++ b/index.html
@@ -377,6 +377,14 @@ Okay
     
     <div class='modal' id='rewardModal'>
 
+
+<!-- /22818991658/rewarddd -->
+<div id='div-gpt-ad-1733722276639-0' style='min-width: 250px; min-height: 250px;'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1733722276639-0'); });
+  </script>
+</div>
+
         
 </body>
 </html>
