--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="bu
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-<script src='https://cdn.jsdelivr.net/gh/yosintv2/bkp/player.js'/>
+<script src='https://cdn.jsdelivr.net/gh/yosintv2/bkp/player.js'></script>
 
 
     
