--- a/indexx.html
+++ b/indexx.html
@@ -296,13 +296,47 @@ Highlights</strong></a>
 <div class='recent-wid section' id='match-cricket' name='Cricket Matches'><div class='widget HTML' data-version='2' id='HTML1'>
 <div class='widget-content'>
 
+	
 <div class="disclaimer" style="text-align: center;"><b><span style="color: black;"> Skip 1-2 Ads | Watch Peacefully !! </span></b></div> 
 
 
 
 	
 <!-- contenthere -->
+<div>Watch the live match of Sevilla vs Villarreal in HD Quality, Scroll down, check out every links for Smooth Live Stream of Sevilla vs Villarreal. 
+Stay tuned with us to watch every live match with us !! </div>
+<br/>
 
+<div>
+Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match.
+</div>
+
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
+     crossorigin="anonymous"></script>
+<!-- Ressponsive -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5525538810839147"
+     data-ad-slot="4345862479"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+
+<div class="post-share text-center m-1">
+<div style="text-align: center;">
+👉<b style="font-family: arial; font-size: 13px;">The match links are activated 15 minutes before kickoff.
+</b></div>
+<div style="text-align: center;">
+👉<b style="font-family: arial; font-size: 13px;">Go to below links to get matches. If the first link doesn’t work, go for the second or third link.
+</b></div></div>
+
+
+	
 <center> 
 <form><input class="MyButton" onclick="window.location.href='https://yosintv2.github.io/tv/ads.html'" type="button" value="Refresh Live" /></form> 
 </center>
