--- a/indexx.html
+++ b/indexx.html
@@ -303,13 +303,10 @@ Highlights</strong></a>
 
 	
 <!-- contenthere -->
-<div>Watch the live match of Sevilla vs Villarreal in HD Quality, Scroll down, check out every links for Smooth Live Stream of Sevilla vs Villarreal. 
-Stay tuned with us to watch every live match with us !! </div>
-<br/>
+<p>Watch the live of this match in HD Quality, Scroll down to check out every links for Smooth Live Stream of this match.</p>
 
-<div>
-Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match.
-</div>
+<p>Predicted lineups are available for the match a few days in advance while the actual lineup will be available about an hour ahead of the match. </p>
+
 
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5525538810839147"
@@ -327,13 +324,11 @@ Predicted lineups are available for the match a few days in advance while the ac
 
 
 
-<div class="post-share text-center m-1">
-<div style="text-align: center;">
-👉<b style="font-family: arial; font-size: 13px;">The match links are activated 15 minutes before kickoff.
-</b></div>
-<div style="text-align: center;">
-👉<b style="font-family: arial; font-size: 13px;">Go to below links to get matches. If the first link doesn’t work, go for the second or third link.
-</b></div></div>
+<ul>
+<li> 👉 <i><b> The match links are activated 15 minutes before kickoff. </b></i></li>
+<li> 👉 <i><b> Go to below links to get matches. </b></i></li>
+<li> 👉 <i><b> If the first link doesn’t work, go for the second or third link. </b></i></li>
+</ul> 
 
 
 	
