--- a/indexx.html
+++ b/indexx.html
@@ -507,7 +507,6 @@ $(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').h
 </div>
 
 
-
 <!-- Sidebar Ad code here -->
 <style scoped='' type='text/css'>
 .fixed-leftSd,.fixed-rightSd{position:fixed;top:80px;width:160px;height:600px; margin: 15px; z-index:9999;transform:translateZ(0)}
@@ -521,18 +520,14 @@ $(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').h
 <b>CLOSE ADS</b>
 </div>
 
-<!-- 1st Ad code here -->
-<script type="text/javascript">
-	atOptions = {
-		'key' : '0b5fee6818d12b8d655cc86916141ca1',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
+<!-- 2nd Ad code here -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:160px;height:600px"
+     data-ad-client="ca-pub-5525538810839147"
+     data-ad-slot="2430057257"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<script type="text/javascript" src="//hailofficemeasure.com/0b5fee6818d12b8d655cc86916141ca1/invoke.js"></script>
-
 
 </div>
 <div class='fixed-rightSd'>
@@ -541,19 +536,16 @@ $(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').h
 </div>
 
 <!-- 2nd Ad code here -->
-<script type="text/javascript">
-	atOptions = {
-		'key' : '0b5fee6818d12b8d655cc86916141ca1',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
+<ins class="adsbygoogle"
+     style="display:inline-block;width:160px;height:600px"
+     data-ad-client="ca-pub-5525538810839147"
+     data-ad-slot="2430057257"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<script type="text/javascript" src="//hailofficemeasure.com/0b5fee6818d12b8d655cc86916141ca1/invoke.js"></script>
-
 </div>
 
+	
 	
 <style> .s-text strong,.social-counter{font-weight:900}.techornate-socials a{display:block;color:#fff;padding:9px 9px;border-radius:6px;position:relative;margin-bottom:5px;text-decoration:none}.techornate-socials a span,.techornate-socials a:before{z-index:2;position:relative}.social-counter{position:absolute;font-family:opensans;font-size:17px;line-height:1;padding-top:4px}.s-text{float:right}.techornate-socials a:after{content:" ";height:100%;width:0;top:0;left:0;position:absolute;background:#0a0647;z-index:1}.fa-subscribe:before,.fa-twitter:before{display:inline-block;width:16px;font-family:opensans;margin-right:10px;padding-right:10px;font-size:18px;border-right:1px solid rgba(255,255,255,.3)}.fa-play{background:#d2002c}.fa-play:after{content:"\f167"} .fa-whatsapp{background:#09b320}</style>
 <div class='footers4 section' id='footers4'><div class='widget HTML' data-version='2' id='HTML44'>
@@ -580,18 +572,6 @@ $(document).ready(function() {$('img#closed').click(function(){$('#bl_banner').h
 -->
 
 
-<script>
-(function(__htavim){
-var d = document,
-    s = d.createElement('script'),
-    l = d.scripts[d.scripts.length - 1];
-s.settings = __htavim || {};
-s.src = "\/\/handmadetip.com\/dwmGFaz.dVGXlftSPC3\/p\/vUbvmuVmJWZlDv0\/0nNJj\/gU1xNiTbYgzhL\/TtQm2EOwD\/UO1\/NljEQD";
-s.referrerPolicy = 'no-referrer-when-downgrade';
-s.async = true;
-l.parentNode.insertBefore(s, l);
-})()
-</script>
 
 
 </body> 
