--- a/indexx.html
+++ b/indexx.html
@@ -4,10 +4,8 @@
 </script><script nonce='I2YLlWR-W_Sv7mZu3qWPIA'>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
 <script type='text/javascript' src='https://yosintv2.github.io/cdn/cdn.js'></script>
 <script async='async' nonce='d8pAqct-dNuDhxBnLYBAlQ' src='https://fundingchoicesmessages.google.com/i/pub-5525538810839147?ers=1'></script><script nonce='d8pAqct-dNuDhxBnLYBAlQ'>(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
+
 <head>
-
-
-	
 <meta content='' name='google-site-verification'/>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 <meta content='width=device-width,minimum-scale=1,initial-scale=1' name='viewport'/>
@@ -47,7 +45,6 @@
 <link href='//fonts.googleapis.com' rel='dns-prefetch'/>
 <link href='https://web.cricfoot.net/style.css' rel='stylesheet'/>
 <link href='https://web.cricfoot.net/player.css' rel='stylesheet'/>
-<script integrity='sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z' src='//instant.page/5.2.0' type='module'></script>
 
 <!-- HillTopADS Push  Ads
 <script>
@@ -279,7 +276,7 @@ cookieChoices = {};
 <div class='widget-content'>
 
 	
-<div class="disclaimer" style="text-align: center;"><b><span style="color: black;"> Skip 1-2 Ads | Watch Peacefully !! </span></b></div> 
+<div class="disclaimer" style="text-align: center;"><b><span style="color: black;"> Scroll Down &amp; Select Match Links !! </span></b></div> 
 
 
 
